# VerbumAI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
verbum/: __init__.py  config.py  indexer.py  pipeline.py  prompts.py  retriever.py
verbum/api/: server.py
verbum/cli/: main.py
verbum/providers/: __init__.py  base.py  claude.py  ollama.py  openai_.py
